--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- 基础信息 -->
     <meta charset="utf-8">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
-
+    <meta name='impact-site-verification' value='707d4cd1-b2e3-4831-ab6d-fa0e2e94493a'>
     <meta name="renderer" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="force-rendering" content="webkit"/>
