--- a/index.html
+++ b/index.html
@@ -15,32 +15,31 @@
     <meta name="keywords" content="Auroraの小栈,个人主页">
     <meta name="author" content="Aurora">
     <title>Auroraの主页</title>
-    <!-- jQuery -->
-    <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/jquery/3.5.1/jquery.min.js"></script>
+    <!-- jQuery - 使用稳定的BootCDN -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- HarmonyOS Sans -->
     <!-- https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css -->
     <link rel="stylesheet" href="https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css"/>
-    <!-- 引入样式 -->
+    <!-- 引入样式 - 使用稳定的BootCDN -->
     <link rel="stylesheet" type="text/css"
-          href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/bootstrap/5.1.0/css/bootstrap.min.css">
+          href="https://cdn.bootcdn.net/ajax/libs/bootstrap/5.1.0/css/bootstrap.min.css">
+    <!-- 合并CSS文件，减少HTTP请求 -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="stylesheet" type="text/css" href="./css/mobile.css">
-    <link rel="stylesheet" type="text/css" href="./css/loading.css">
-    <link rel="stylesheet" type="text/css" href="./css/animation.css">
-    <link rel="icon" href="https://aurora-cdn.wuhobin.top/blog/favicon.png">
-    <link rel="apple-touch-icon" href="https://aurora-cdn.wuhobin.top/blog/favicon.png">
-    <!-- Izitoast -->
-    <link rel="stylesheet" href="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-y/izitoast/1.4.0/css/iziToast.min.css">
-    <script type="text/javascript"
-            src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-y/izitoast/1.4.0/js/iziToast.min.js">
-    </script>
+    <link rel="icon" href="./img/icon/favicon.ico">
+    <link rel="apple-touch-icon" href="./img/icon/apple-touch-icon.png">
+    <!-- Izitoast - 使用稳定的BootCDN -->
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/izitoast/1.4.0/css/iziToast.min.css">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <!-- Aplayer -->
-    <link rel="stylesheet" href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/aplayer/1.10.1/APlayer.min.css"
+    <!-- Aplayer - 使用稳定的BootCDN -->
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/aplayer/1.10.1/APlayer.min.css"
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-y/aplayer/1.10.1/APlayer.min.js" crossorigin="anonymous"
-            referrerpolicy="no-referrer"></script>
+    
+    <!-- 延迟加载非关键JavaScript -->
+    <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/izitoast/1.4.0/js/iziToast.min.js" defer>
+    </script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/aplayer/1.10.1/APlayer.min.js" crossorigin="anonymous"
+            referrerpolicy="no-referrer" defer></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2WVH35V11W"></script>
 
     <!-- <script src="./js/Meting.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
@@ -57,8 +56,8 @@
     </script>
     <!-- PWA -->
     <link rel="manifest" href="/manifest.json">
-    <!-- 51.LA 统计 -->
-    <script src="./js/51LA.js"></script>
+    <!-- 51.LA 统计 - 异步加载 -->
+    <script src="./js/51LA.js" async></script>
 </head>
 
 <body>
@@ -81,7 +80,7 @@
 <section id="section" class="section">
     <!-- 背景图片 -->
     <div class="bg-all">
-        <img id="bg" onerror="this.classList.add('error');">
+        <img id="bg" loading="lazy" onerror="this.classList.add('error');">
         <div class="cover"></div>
     </div>
     <!-- 鼠标指针 -->
@@ -377,13 +376,13 @@
                     <!--左侧内容-->
                     <div class="box-left">
                         <div class="img-title">
-                            <span class="img-title-big" id="logo-title-other">Bywind</span>
-                            <span class="img-text" id="logo-title-other-small">.xyz</span><br/>
-                            <span class="img-text">&nbsp;v&nbsp;1.0</span>
-                            <a href="https://github.com/haonan15" target="_blank">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                        </div>
+                        <span class="img-title-big" id="logo-title-other">Bywind</span>
+                        <span class="img-text" id="logo-title-other-small">.xyz</span><br/>
+                        <span class="img-text">&nbsp;v&nbsp;1.0</span>
+                        <a href="https://github.com/wuhobin" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </div>
                         <!--更多内容-->
                         <div class="accordion" id="accordion">
                             <div class="accordion-item">
@@ -506,13 +505,14 @@
     <div class="noscript fixed-top">请开启 JavaScript</div>
 </noscript>
 <!-- JS -->
-<script type="text/javascript" src="./js/main.js"></script>
-<script type="text/javascript" src="./js/set.js"></script>
-<script type="text/javascript" src="./js/time.js"></script>
 <script type="text/javascript" src="./js/js.cookie.js"></script>
 <script type="text/javascript"
-        src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/bootstrap/5.1.0/js/bootstrap.min.js">
+        src="https://cdn.bootcdn.net/ajax/libs/bootstrap/5.1.0/js/bootstrap.min.js">
 </script>
+<!-- 确保依赖库加载完成后再加载自定义脚本 -->
+<script type="text/javascript" src="./js/main.js" defer></script>
+<script type="text/javascript" src="./js/set.js" defer></script>
+<script type="text/javascript" src="./js/time.js" defer></script>
 </body>
 
 </html>
